deps/v8/test/message/fail/modules-duplicate-export3.out
*%(basename)s:7: SyntaxError: Duplicate export of 'x'
export {y as x};
        ^^^^^^
SyntaxError: Duplicate export of 'x'

